Fix: moved login buttons to the dropdown menu on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,10 @@ p {
     line-height: 1.8em;
 }
 
+p img {
+    width: 100% !important;
+}
+
 ol {
     font-size: 18px;
     line-height: 1.8em;
@@ -42,7 +46,11 @@ footer {
     margin-left: 32px;
 }
 
-@media (max-width: 703px) {
+.nerd-login-buttons-container {
+    margin-left: 4em;
+}
+
+@media (max-width: 1200px) {
     .nerd-search {
         margin-left: 0;
     }
